--- a/src/styles/home-medium.css
+++ b/src/styles/home-medium.css
@@ -46,12 +46,16 @@
     }
 
     img.mountain-crop-5 {
-      	z-index: -5;
-    }
+		z-index: -5;
+  	}
 
-	img.mountain-full {
-		z-index: -6;
-    }
+  	img.mountain-crop-6 {
+	  		z-index: -6;
+	}
+
+  	img.mountain-full {
+	  	z-index: -7;
+  	}
 
 
 
